# UniOpt

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  Taskfile.yaml  pyproject.toml  setup.cfg
scripts/: conda.bat  conda.sh  get_env_name.py  target.sh  version.sh
uniopt/: __init__.py  logger.py
uniopt/algorithms/: GA.py  LOCAL.py  ga.py  local.py
uniopt/context/: enums.py  optimization_context.py  variables.py
uniopt/history/: history.py
uniopt/optimization/: optimizer.py
uniopt/stopping_criteria/: stopping_criteria.py
uniopt/utils/: custom_types.py
