[project]
name = "uniopt"
version = "0.0.1"
description = "A library with optimization algorithms"
authors = [{name = "EpicUTS", email = "cepuni02@unicamp.br"}]

requires-python = ">=3.10, <3.14"

dependencies = [
    "pandas==2.2.3",
    "setuptools==75.2.0",
    "numpy >= 1.22,<2.1",
    "psutil==6.1.1"
]

[tool.poetry.group.dev.dependencies]
pytest = {version = "8.2.2"}
flake8 = {version = "7.1.1"}
black = {version = "24.8.0"}
isort = {version = "5.13.2"}
sphinx = {version = "7.4.4"}

[tool.black]
line-length = 100
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
